solved navigation and overlap issues

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -153,9 +153,11 @@
     transform: translateY(25%) translateX(0%);
   }
   /* Clear floats after the columns */
+
+
   .row:after {
     content: "";
-    display: table;
+    display: flex;
     clear: both;
 
   }  
@@ -631,6 +633,7 @@ label {
   }
  
 @media screen and (max-width: 1150px) {
+ 
   .modal-window > div {
     flex-direction: column;
     left: 50%;
@@ -774,6 +777,20 @@ label {
     }
   }
   @media screen and (max-width: 770px){
+
+    .row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .column:nth-child(8){
+    margin-top: -33rem;
+  }
+
   .filter-wrap{
     display: flex;
     flex-direction: column;
