--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -47,6 +47,7 @@ a.nav-text:hover {
 	width: 2rem;
 	height: 1.5rem;
 	filter: invert(27%) sepia(34%) saturate(217%) hue-rotate(154deg) brightness(92%) contrast(95%);
+	padding-left: 0.5rem;
 }
 
 .sub-nav-li {
@@ -54,9 +55,7 @@ a.nav-text:hover {
   flex-direction: row;
   align-items: center;
   gap: .25rem;
-  padding-left: .5rem;
-  padding-right: .5rem;
-  margin-right: .5rem;
+  width: 100%;
 
 }
 
